# aionotify

./: .coveragerc  .travis.yml  CHANGES  CREDITS  INSTALL  MANIFEST.in  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml  test.yml  tox-action.yaml
aionotify/: __init__.py  aioutils.py  base.py  enums.py
examples/: minimal.py  print.py
tests/: test_enums.py  test_usage.py
