[metadata]
name = aionotify
version = 0.3.0.dev0
description = Asyncio-powered inotify library
long_description = file: README.rst
# https://docutils.sourceforge.io/FAQ.html#what-s-the-official-mime-type-for-restructuredtext-data
long_description_content_type = text/x-rst
author = Raphaël Barrois
author_email = raphael.barrois+aionotify@polytechnique.org
url = https://github.com/rbarrois/aionotify
keywords = asyncio, inotify
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Filesystems

[options]
zip_safe = false
packages = aionotify
python_requires = >= 3.8
install_requires =

[options.extras_require]
dev =
    # Runners
    tox
    # Quality
    check_manifest
    flake8
    # Packaging
    wheel
    zest.releaser[recommended]
    readme_renderer<25.0; python_version == "3.4"
    colorama<=0.4.1; python_version == "3.4"

[bdist_wheel]
universal = 1

[zest.releaser]
; semver-style versions
version-levels = 3

[distutils]
index-servers = pypi

[flake8]
# Ignore "and" at start of line.
ignore = W503
max-line-length = 120
